[package]
name = "mio-pidfd"
version = "0.3.0"
authors = ["Samuel Brian <atticus.brian@gmail.com>"]
edition = "2018"
description = "mio support for Linux's pidfd"
repository = "https://github.com/samuelbrian/mio-pidfd"
documentation = "https://docs.rs/mio-pidfd"
keywords = ["asynchronous", "mio", "pidfd", "pid", "linux"]
categories = ["asynchronous"]
license = "MIT"

[dependencies]
mio = { version = "0.8", features = ["os-ext"] }
libc = "0.2"
